--- a/Misnotas/app/src/main/res/layout/activity_agregar_nota.xml
+++ b/Misnotas/app/src/main/res/layout/activity_agregar_nota.xml
@@ -11,7 +11,7 @@
     <TextView android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/primary_text"
-        android:text="NOTA"
+        android:text="Nueva Nota"
         android:textSize="24dp"
         android:textAlignment="center"/>
 
@@ -36,7 +36,8 @@
 
 
     <Button android:id="@+id/btn_guardar"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
+        android:layout_gravity="center"
         android:background="@color/colorPrimaryDark"
         android:textColor="@color/primary_text"
         android:layout_height="wrap_content"
